    - (Setting: 0.025) Level 20 unit requires 1.5x pollution to generate.  Level 10 unit requires 1.25x pollution to generate.
    - (Setting: 0.01) Level 20 unit requires 1.2x pollution to generate.  Level 10 unit requires 1.1x pollution to generate.
    - (Setting: 0) No change to unit's pollution value.
    - small damage reduction at lower level of corrupted robots.
    - biter's featured group changes

---------------------------------------------------------------------------------------------------
Version: 1.16.6
Date: 2022-12-29

  Bugfixes:
    - Fix a crash when army control hotkey is pressed while army control is not active.

---------------------------------------------------------------------------------------------------
Version: 1.16.5
Date: 2022-12-20

  Changes:
    - Buffed player's construction / logistic robot to have 500 health, regardless of max level difficulty.

  Bugfixes:
    - Fixed a crash when logistic robot spawn in vanilla biter feature group. (no one play against biters with this mod, lol).

---------------------------------------------------------------------------------------------------
Version: 1.16.4
Date: 2022-12-19

  Bugfixes:
    - Fixed a multiplayer issue, mod-enemyracemanager was registered for the following events when the map was saved but has not re-registered them as a result of loading: on_entity_spawned.

---------------------------------------------------------------------------------------------------
Version: 1.16.3
Date: 2022-12-19

  Bugfixes:
    - Fixed that nuking the boss can kill the player vision.
    - Fixed a tab handler crash with LTN management window.
    - Fixed a crash caused by post process mod was treated as an enemy race in 1 race / surface configuration.

---------------------------------------------------------------------------------------------------
Version: 1.16.2
Date: 2022-12-16

  Bugfixes:
    - Fix a crash when launching Psi tracking satellite.
