@@ -57,6 +57,9 @@ function makeLevelEnemy(level, type, health_cut_ratio)
     ERM_UnitHelper.modify_biter_damage(biter, type, level)
     biter['movement_speed'] = ERM_UnitHelper.get_movement_speed(biter['movement_speed'], biter['movement_speed'], settings.startup["enemyracemanager-level-multipliers"].value, level)
 
+    biter['pollution_to_join_attack'] = ERM_UnitHelper.get_pollution_attack(biter['pollution_to_join_attack'], level)
+    ERM_UnitHelper.modify_biter_damage(biter, type, level)
+
     return biter
 end
 
